Update load 11.0 of the version
更改js为11.0的版本

--- a/charts/src/main/assets/AAChartView.html
+++ b/charts/src/main/assets/AAChartView.html
@@ -6,17 +6,20 @@
     <title>AAChartKit-Swift</title>
 
     <script src="AAChartView.js" ></script>
-    <script src="AAHighcharts.js"></script>
-    <script src="AAHighcharts-More.js"></script>
+<!--     <script src="AAHighcharts.js"></script>
+    <script src="AAHighcharts-More.js"></script> -->
     <script src="AAFunnel.js"></script>
     <script src="AAEasing.js"></script>
     <script src="AARounded-Corners.js"></script>
 
+    <script src="https://code.hcharts.cn/11.1.0/highcharts.js">
+    <script src="https://code.hcharts.cn/11.1.0/highcharts-more.js">
+    
     <!--<script src = "https://img.hcharts.cn/highcharts/themes/dark-unica.js">-->
     <!--</script>-->
 
     <!--&lt;!&ndash;若介意本地js代码体积(250KB左右)过大，可换用加载网络js代码 &ndash;&gt;-->
-    <!--<script src="https://img.hcharts.cn/highcharts/highcharts.js">-->
+    <!--<script src="https://code.hcharts.cn/11.1.0/highcharts.js">-->
     <!--</script>-->
     <!--<script src="https://img.hcharts.cn/highcharts/highcharts-more.js">-->
     <!--</script>-->
